2004-11-12  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.62.

2004-11-09  John W. Eaton  <jwe@octave.org>

	* OPERATORS/op-int-concat.cc: New file for mixed integer/other
	concatentation operators.
	* Makefile.in (INTTYPE_OP_XSRC): Add it to the list.

	* ops.h (DEFNDCATOP_FN2): New macro.

	* OPERATORS/op-int.h (OCTAVE_CONCAT_FN2,
	OCTAVE_INSTALL_CONCAT_FN2, OCTAVE_DOUBLE_INT_CONCAT_FN,
	OCTAVE_INSTALL_DOUBLE_INT_CONCAT_FN, OCTAVE_INT_DOUBLE_CONCAT_FN,
	OCTAVE_INSTALL_INT_DOUBLE_CONCAT_FN): New macros.

2004-11-09  David Bateman  <dbateman@free.fr>

	* Cell.cc (concat): Delete.
	(Cell::concat): New method.
	* Cell.h: Provide decls.
	
	* oct-map.cc (concat): Delete
	(Octave_map::concat): New method.
	* oct-map.h: Provide decls.
	
	* ov.h (typedef octave_value (*cat_op_fcn) (octave_value&, 
	const octave_value&, const Array<int>&): Change definition of 
	cat_op_fcn so first argument is not constant.

	* ops.h (CATOPDECL): First arg is no longer constant.
	(DEFCATOP_FN, DEFNDCATOP_FN): Change to use new concat methods.

	* OPERATORS/op-chm.cc, OPERATORS/op-str-m.cc, OPERATORS/op-str-s.cc, 
	OPERATORS/op-str-str.cc (DEFCATOP): Change explicit concat functions
	to use new concatenation methods.

2004-11-05  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.61.

	* DLD-FUNCTIONS/det.cc (det): Always compute rcond so we can
	detect numerically singular matrices.

2004-11-04  John W. Eaton  <jwe@octave.org>

	* pt-colon.cc (tree_colon_expression::line,
	tree_colon_expression::column): New functions.
	* pt-colon.h: Provide decls.

	* oct-stream.cc (octave_stream::seek (long, int)): Return error
	(but leave file position unchanged) for attempt to seek beyond end
	of file.

	* DLD-FUNCTIONS/inv.cc (Finv): Check rcond value returned from
	LAPACK routines, and be careful to avoid optimizing away the
	1+rcond == 1.0 check.
	* DLD-FUNCTIONS/det.cc (Fdet): Likewise.

2004-11-03  John W. Eaton  <jwe@octave.org>
